Add prettier + lint-staged + husky setup

--- a/package.json
+++ b/package.json
@@ -5,16 +5,26 @@
   "dependencies": {
     "contentful": "^4.4.3",
     "moment": "^2.18.1",
+    "prettier": "^1.4.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "husky": "^0.13.4",
+    "lint-staged": "^4.0.0",
     "react-scripts": "1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
