--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "moment": "^2.18.1",
     "prettier": "^1.4.4",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
     "husky": "^0.13.4",
