--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prettier": "^1.4.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-markdown": "^2.5.0",
     "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
