Fix gitignore + add deploy script

--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # Ignore CSS files since we use Sass to preprocess CSS
-**/*.css
+src/*.css
+src/components/**/*.css
+src/pages/**/*.css
+src/lib/nord.css
