--- a/package.json
+++ b/package.json
@@ -27,12 +27,10 @@
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "deploy": "npm run build && cd build && mv index.html 200.html && surge"
   },
   "lint-staged": {
-    "*.js": [
-      "prettier --write --single-quote --no-semi",
-      "git add"
-    ]
+    "*.js": ["prettier --write --single-quote --no-semi", "git add"]
   }
 }
